--- a/springboot/pom.xml
+++ b/springboot/pom.xml
@@ -31,6 +31,17 @@
 			<artifactId>pagehelper-spring-boot-starter</artifactId>
 			<version>2.1.0</version>
 		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.apache.shardingsphere</groupId>-->
+<!--			<artifactId>sharding-jdbc-spring-boot-starter</artifactId>-->
+<!--			<version>4.1.1</version>-->
+<!--		</dependency>-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+			<version>3.2.2</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>com.mysql</groupId>
