--- a/springboot/src/main/resources/application.yaml
+++ b/springboot/src/main/resources/application.yaml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://192.168.7.3:30469/demo?useSSL=false&autoReconnect=true&characterEncoding=utf8
+    url: jdbc:mysql://mysql.demo:31373/demo?useSSL=false&autoReconnect=true&characterEncoding=utf8
     username: root
-    password: 123456
+    password: 1qaz@WSX
     driver-class-name: com.mysql.cj.jdbc.Driver
 mybatis:
   mapper-locations: classpath:mapper/*.xml
