--- a/springboot/src/main/resources/application.yaml
+++ b/springboot/src/main/resources/application.yaml
@@ -4,5 +4,23 @@ spring:
     username: root
     password: 1qaz@WSX
     driver-class-name: com.mysql.cj.jdbc.Driver
+  data:
+    redis:
+      database: 0
+      host: redis.demo
+      port: 32185
+      password: 1qaz@WSX
+      connect-timeout: 30000ms
+      lettuce:
+        pool:
+          max-active: 8 # 连接池最大连接数（使用负值表示没有限制） 默认 8
+          max-wait: -1ms # 连接池最大阻塞等待时间（使用负值表示没有限制） 默认 -1
+          min-idle: 0 # 连接池中的最大空闲连接 默认 8
+          max-idle: 8 # 连接池中的最小空闲连接 默认 0
 mybatis:
   mapper-locations: classpath:mapper/*.xml
+logging:
+  level:
+    com:
+      example:
+        springboot: debug
