--- a/springboot/pom.xml
+++ b/springboot/pom.xml
@@ -49,6 +49,10 @@
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+		<groupId>org.springframework.kafka</groupId>
+		<artifactId>spring-kafka</artifactId>
+	</dependency>
 	</dependencies>
 
 	<build>
