--- a/springboot/src/main/resources/application.yaml
+++ b/springboot/src/main/resources/application.yaml
@@ -17,6 +17,15 @@ spring:
           max-wait: -1ms # 连接池最大阻塞等待时间（使用负值表示没有限制） 默认 -1
           min-idle: 0 # 连接池中的最大空闲连接 默认 8
           max-idle: 8 # 连接池中的最小空闲连接 默认 0
+  kafka:
+    consumer:
+      bootstrap-servers: localhost:9092
+      # 配置消费者消息offset是否自动重置(消费者重连会能够接收最开始的消息)
+      auto-offset-reset: earliest
+    producer:
+      bootstrap-servers: localhost:9092
+      # 发送的对象信息变为json格式
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
 mybatis:
   mapper-locations: classpath:mapper/*.xml
 logging:
