--- a/springboot/src/main/resources/application.yaml
+++ b/springboot/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://mysql.demo:30406/demo?useSSL=false&autoReconnect=true&characterEncoding=utf8
+    url: jdbc:mysql://mysql.demo:3306/demo?useSSL=false&autoReconnect=true&characterEncoding=utf8
     username: root
     password: 1qaz@WSX
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -8,7 +8,7 @@ spring:
     redis:
       database: 0
       host: redis.demo
-      port: 31380
+      port: 6379
       password: 1qaz@WSX
       connect-timeout: 30000ms
       lettuce:
@@ -18,14 +18,7 @@ spring:
           min-idle: 0 # 连接池中的最大空闲连接 默认 8
           max-idle: 8 # 连接池中的最小空闲连接 默认 0
   kafka:
-    consumer:
-      bootstrap-servers: localhost:9092
-      # 配置消费者消息offset是否自动重置(消费者重连会能够接收最开始的消息)
-      auto-offset-reset: earliest
-    producer:
-      bootstrap-servers: localhost:9092
-      # 发送的对象信息变为json格式
-      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+    bootstrap-servers: kafka.demo:9092
 mybatis:
   mapper-locations: classpath:mapper/*.xml
 logging:
