--- a/pom.xml
+++ b/pom.xml
@@ -10,5 +10,6 @@
 	<modules>
 		<module>springboot</module>
         <module>false-share</module>
+        <module>demo-spi</module>
     </modules>
 </project>
