--- a/pom.xml
+++ b/pom.xml
@@ -11,5 +11,6 @@
 		<module>springboot</module>
         <module>false-share</module>
         <module>demo-spi</module>
+        <module>demo-thread</module>
     </modules>
 </project>
