--- a/false-share/pom.xml
+++ b/false-share/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.example</groupId>
-        <artifactId>java-c</artifactId>
+        <artifactId>lang-java</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
