--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.example</groupId>
-	<artifactId>java-c</artifactId>
+	<artifactId>lang-java</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
@@ -16,5 +16,6 @@
         <module>demo-clone</module>
         <module>lab</module>
         <module>sms-spring-boot-starter</module>
+        <module>demo-time-whell</module>
     </modules>
 </project>
