--- a/springboot/pom.xml
+++ b/springboot/pom.xml
@@ -56,7 +56,7 @@
         </dependency>
         <dependency>
             <groupId>com.example</groupId>
-            <artifactId>sms-spring-boot-starter</artifactId>
+            <artifactId>demo-spring-boot-starter</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
